Add mechanic reviews page

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -37,6 +37,7 @@
         <a href="#inicio" class="nav-link active">Inicio</a>
         <a href="#citas" class="nav-link">Citas</a>
         <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
+        <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
         <a href="#ubicacion" class="nav-link">Ubicación</a>
         <a href="./perfil.html" class="nav-link">Perfil</a>
         <a href="./registro-taller.html" class="nav-link" data-visible-for="mecanico" hidden>Registrar Taller</a>
