Add reviews link to About page navigation

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -26,10 +26,9 @@
       </div>
       <nav class="main-nav" aria-label="Principal">
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
-        <a href="./paginainicio.html#citas" class="nav-link">Citas</a>
         <a href="./sobre-nosotros.html" class="nav-link active">Sobre nosotros</a>
         <a href="./paginainicio.html#ubicacion" class="nav-link">Ubicación</a>
-        <a href="./perfil.html" class="nav-link">Perfil</a>
+        <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
         <a
           href="./registro-taller.html"
           class="nav-link"
@@ -47,8 +46,6 @@
         >
           Iniciar sesión
         </a>
-        <a href="./paginainicio.html#citas" class="button button-primary">Agendar Cita</a>
-        <a href="./perfil.html" class="button ghost">Mi Perfil</a>
         <a href="./registro-taller.html" class="button ghost" data-visible-for="mecanico" hidden>
           Registrar Taller
         </a>
@@ -66,6 +63,7 @@
         </p>
         <div class="hero-actions">
           <a class="button ghost" href="./paginainicio.html">Volver al inicio</a>
+          <a class="button" href="./resenas-mecanicos.html">Ver reseñas</a>
         </div>
       </section>
 
