Move reviews link into main navigation

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -28,6 +28,7 @@
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link active">Sobre nosotros</a>
         <a href="./paginainicio.html#ubicacion" class="nav-link">Ubicación</a>
+        <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
         <a
           href="./registro-taller.html"
           class="nav-link"
@@ -60,9 +61,6 @@
           talleres confiables, transparentes y preparados para resolver cada
           necesidad automotriz.
         </p>
-        <div class="hero-actions">
-          <a class="button ghost" href="./paginainicio.html">Volver al inicio</a>
-        </div>
       </section>
 
       <section class="about-narrative" aria-label="Nuestra esencia">
