Add appointment scheduling page and mechanic requests

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -27,6 +27,7 @@
         <a href="#inicio" class="nav-link active">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
         <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
+        <a href="./agendar-cita.html" class="nav-link">Agendar cita</a>
         <a href="#ubicacion" class="nav-link">Ubicación</a>
         <a
           href="./perfil.html"
@@ -48,7 +49,7 @@
       </nav>
       <div class="header-actions">
         <a href="./login.html" class="button button-secondary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
-        <a href="#agendar" class="button button-primary">Agendar Cita</a>
+        <a href="./agendar-cita.html" class="button button-primary">Agendar Cita</a>
         <a href="./perfil.html" class="button ghost" data-auth-visibility="authenticated" hidden>Mi Perfil</a>
         <a
           href="./registro-taller.html"
