--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -104,6 +104,25 @@
 
         </section>
 
+        <section
+            class="mechanic-requests"
+            id="solicitudes"
+            aria-labelledby="solicitudes-title"
+            data-mechanic-section
+            hidden
+        >
+            <div class="section-header">
+                <div>
+                    <h2 id="solicitudes-title">Solicitudes de visitas</h2>
+                    <p>Revisa y gestiona las citas que los clientes han solicitado contigo.</p>
+                </div>
+            </div>
+            <div class="requests-list" data-mechanic-requests></div>
+            <p class="empty-state" data-mechanic-empty hidden>
+                No tienes solicitudes pendientes por ahora. Cuando un cliente agende contigo aparecerá aquí.
+            </p>
+        </section>
+
         <section class="history" id="historial" aria-labelledby="historial-title">
             <div class="section-header">
                 <div>
