Adjust home header buttons

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -48,8 +48,7 @@
         </a>
       </nav>
       <div class="header-actions">
-        <a href="./login.html" class="button button-secondary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
-        <a href="./agendar-cita.html" class="button button-primary">Agendar Cita</a>
+        <a href="./login.html" class="button button-primary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
         <a href="./perfil.html" class="button ghost" data-auth-visibility="authenticated" hidden>Mi Perfil</a>
         <a
           href="./registro-taller.html"
